# Starship-shooting-game

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: log.cpp  log.h  main.cpp  screen.cpp  screen.h  sprite.cpp  sprite.h
